--- v3.6 (2019-xx-xx) ---
* Package libfcgi: update PKG_URL.
* Add function GenerateConfigureScript() and use it for simplifying build
  scripts of some packages.
* Improve cmake toolchain files: added BUILD_SHARED_LIBS, BUILD_STATIC_LIBS,
  BUILD_SHARED and BUILD_STATIC variables.
* Update in all static configs:
  - SQLITE_VER from 3.23.2 to 3.28.0
  - LIBXML2_VER from 2.9.4 to 2.9.9
  - LIBXSLT_VER from 1.1.29 to 1.1.33
  - EXPAT_VER from 2.2.5 to 2.2.6
  - TIFF_VER from 4.0.9 to 4.0.10
  - LIBGPG_ERROR_VER from 1.27 to 1.36
  - LIBGCRYPT_VER from 1.8.1 to 1.8.4
  - OPENSSL_VER from 1.0.2q to 1.0.2r
  - FREETYPE_VER from 2.8.1 to 2.10.0
  - FONTCONFIG_VER from 2.12.6 to 2.13.1
* Update in all configs:
  - GCC_EXTRA_VER from 8.2.0 to 8.3.0
  - BOOST_VER from 1.65.0 to 1.67.0
  - LIBFCGI_VER from 2.4.0 to 2.4.2
  - PCRE_VER from 8.42 to 8.43
  - PCRE2_VER from 10.30 to 10.33

--- v3.5 (2019-02-18) ---
* Add new package: libxkbcommon.
* Exclude package qtwebkit from list of packages for `make all` target.
* Update package fontconfig: set FONTCONFIG_PATH to "/etc/fonts" at
  configuration stage for fixing of runtime error:
  "Fontconfig error: Cannot load default config file"
* Update packages pcre and pcre2: build using gcc-extra for enabling of C++11
  features in libpcrecpp.
* Update package exiv2: update PKG_URL after changes on website.
* Update package qtwebkit: rewrite build script after switching of QtWebKit
  project to cmake.
* Update in all (supported) configs:
  - QTWEBKIT_VER to 5.212 (code from git repository is used)
  - QT5_VER from 5.12.0 to 5.12.1

--- v3.4 (2018-12-26) ---
* Add new packages: pcre, qtremoteobjects.
* Update cmake toolchain file generated by package cmake-settings: added
  workarround for fixing builds of some cmake-based projects using GCC >= 6.x.
  (Due to misuse of "-isystem" compiler option.)
* Package qtbase: update configuration options after switching to Qt 5.11.x.