@@ -109,6 +109,8 @@ LIBGCRYPT_VER=1.4.4
 OPENSSL_VER=0.9.8n
 OPENSSL_SUBVER=0.9.x
 
+LIBUUID_VER=
+LIBUUID_SUBVER=
 HARFBUZZ_VER=
 FREETYPE_VER=2.4.2
 FONTCONFIG_VER=2.8.0
