@@ -113,6 +113,8 @@ LIBGCRYPT_VER=1.8.1
 OPENSSL_VER=1.0.2q
 OPENSSL_SUBVER=1.0.2
 
+LIBUUID_VER=
+LIBUUID_SUBVER=
 HARFBUZZ_VER=
 FREETYPE_VER=2.8.1
 FONTCONFIG_VER=2.12.6
