@@ -105,6 +105,8 @@ LIBGCRYPT_VER=1.8.4
 OPENSSL_VER=1.0.2r
 OPENSSL_SUBVER=1.0.2
 
+LIBUUID_VER=2.33.2
+LIBUUID_SUBVER=2.33
 HARFBUZZ_VER=
 FREETYPE_VER=2.10.0
 FONTCONFIG_VER=2.13.1
