@@ -105,6 +105,8 @@ LIBGCRYPT_VER=1.5.0
 OPENSSL_VER=1.0.1e
 OPENSSL_SUBVER=1.0.1
 
+LIBUUID_VER=
+LIBUUID_SUBVER=
 #HARFBUZZ_VER=0.9.35
 HARFBUZZ_VER=
 FREETYPE_VER=2.5.5
