@@ -108,6 +108,8 @@ LIBGCRYPT_VER=1.5.3
 OPENSSL_VER=1.0.1u
 OPENSSL_SUBVER=1.0.1
 
+LIBUUID_VER=
+LIBUUID_SUBVER=
 # HARFBUZZ_VER=0.9.27
 HARFBUZZ_VER=
 # FREETYPE_VER=2.5.2
