@@ -113,6 +113,8 @@ LIBGCRYPT_VER=1.8.4
 OPENSSL_VER=1.0.2r
 OPENSSL_SUBVER=1.0.2
 
+LIBUUID_VER=2.33.2
+LIBUUID_SUBVER=2.33
 #HARFBUZZ_VER=1.7.1
 HARFBUZZ_VER=
 # FREETYPE_VER=2.5.2
