@@ -155,6 +155,7 @@ a25ad51e9555099cc333998bbb8d033b5b20136c42b3dc16263c65b19f405ce4  libusb-1.0.9.t
 187d7ba94f7f22ca1f0f97028f9e366d683b03bbd0e3f0be0933951c95f0d5cd  libusb-1.0.10.tar.gz
 dbb80a454136a5cc77f358158035a1373ff773f7a857be1b16f27d02683c997a  libusb-1.0.11.tar.gz
 b3d6e24bff88e904cabe3c7b3e7e0c8cb7c62d2dd6cbaa0068b7aa5092619bf7  libusb-1.0.17.tar.gz
+681cea3257d0220178bd7e6ab9902671501c57dda42d00157988da51274df348  libuuid-2.33.2.tar.gz
 8c7f867918a3739dc7cabe955179539d4a7ecc52cb42becfd261e5dfbff511ac  libX11-1.3.3.tar.bz2
 c382efd7e92bfc3cef39a4b7f1ecf2744ba4414a705e3bc1e697f75502bd4d86  libX11-1.5.0.tar.bz2
 2aa027e837231d2eeea90f3a4afe19948a6eb4c8b2bec0241eba7dbc8106bd16  libX11-1.6.2.tar.bz2
