@@ -1,0 +1,39 @@
+#!/bin/sh
+#
+# This file is part of LXE project. See LICENSE file for licensing information.
+
+[ -z "${LIBUUID_VER}" ] || \
+(
+    PKG=libuuid
+    PKG_VERSION=${LIBUUID_VER}
+    PKG_SUBDIR=${PKG}-${PKG_VERSION}
+    PKG_SUBDIR_ORIG=util-linux-${PKG_VERSION}
+    PKG_FILE=${PKG}-${PKG_VERSION}.tar.gz
+    PKG_URL="https://www.kernel.org/pub/linux/utils/util-linux/v${LIBUUID_SUBVER}/util-linux-${LIBUUID_VER}.tar.gz"
+    PKG_DEPS="gcc"
+
+    CheckPkgVersion
+    CheckSourcesAndDependencies
+
+    if IsBuildRequired
+    then
+        PrintSystemInfo
+        BeginOfPkgBuild
+        UnpackSources
+        PrepareBuild
+
+        SetBuildFlags
+        SetCrossToolchainPath
+        SetCrossToolchainVariables
+        ConfigureAutotoolsProject \
+            --disable-all-programs \
+            --enable-libuuid
+
+        BuildPkg -j ${JOBS}
+        InstallPkg install
+
+        CleanPkgBuildDir
+        CleanPkgSrcDir
+    fi
+)
+
